<resources>

    <string name="app_name">海南农产品追溯二维码</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">海南农产品追溯二维码</string>
    <string name="title_dialog_save">已保存至：</string>

    <string name="produce_id">【1】物品编码：</string>
    <string name="produce_id_hint">标识农产品,全球唯一交易码(14位)</string>
    <string name="produce_source">【2】厂商编码：</string>
    <string name="produce_source_hint">生产厂商名称</string>
    <string name="produce_name">【3】产品编码：</string>
    <string name="produce_name_hint">生产物品名称</string>
    <string name="produce_date">【4】生产日期：</string>
    <string name="produce_date_hint">标识生产日期</string>
    <string name="produce_package_date">【5】包装日期：</string>
    <string name="produce_package_date_hint">标识包装日期</string>
    <string name="produce_website">【6】服务网址：</string>
    <string name="produce_website_hint">标识RESTful服务的URI地址</string>
    <string name="produce_list">【7】厂商产品目录：</string>
    <string name="produce_list_hint">标识厂商已记录产品目录的清单URI</string>
    <string name="produce_address">【8】数据聚合通告地址：</string>
    <string name="produce_address_hint">标识数据聚合通告订阅服务URI</string>
    
    <string name="toast_empty_item_pre">【第</string>
    <string name="toast_empty_item">项】不能为空哦！\n</string>
    <string name="toast_empty">内容为空哦！</string>
    <string name="toast_empty_five">【前5项】为必填内容！</string>
    <string name="toast_edit_id">【物品编码】必须为【14位】！</string>
    <string name="toast_website_error">网址格式有误！</string>
    
    <string name="text_edit_def_website">http://www..com</string>
    
    <string name="btn_qrcode_create">生成二维码</string>
    <string name="btn_save">保存到SD卡</string>
    <string name="btn_negative">确定</string>
</resources>