<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@drawable/bg_vertical"
    >
	<ScrollView 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/mBtnLayout"
	    >
	    <LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    >
		    <LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical"
			    android:background="@drawable/bg_input_item"
				android:layout_marginRight="30dp"
				android:layout_marginBottom="20dp"
			    >
			    <TextView 
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:textColor="@color/white"
			        android:text="@string/produce_id"			        
			        android:layout_weight="1"
			        android:textSize="18sp"
			        />
			    <EditText 
			        android:id="@+id/mID"
		            android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:background="@drawable/selector_edittext"
			        android:hint="@string/produce_id_hint"	
			        android:singleLine="true"
			        android:textColor="@color/black"
			        android:textSize="18sp"    
			        android:onClick="onIDClick"
		            />
			</LinearLayout>
			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical"
			    android:background="@drawable/bg_input_item"
			    android:layout_marginLeft="30dp"
				android:layout_marginBottom="20dp"
			    >
			    <TextView 
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:textColor="@color/white"
			        android:text="@string/produce_source"			        
			        android:layout_weight="1"
			        android:textSize="18sp"
			        />
			    <EditText 
			        android:id="@+id/mSource"
		            android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:background="@drawable/selector_edittext"
			        android:hint="@string/produce_source_hint"
			        android:singleLine="true"
			        android:textColor="@color/black"
			        android:textSize="18sp"			        
		            />
			</LinearLayout>
			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical"
			    android:background="@drawable/bg_input_item"
				android:layout_marginRight="30dp"
				android:layout_marginBottom="20dp"
			    >
			    <TextView 
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:textColor="@color/white"
			        android:text="@string/produce_name"			        
			        android:layout_weight="1"
			        android:textSize="18sp"
			        />
			    <EditText 
			        android:id="@+id/mName"
		            android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:background="@drawable/selector_edittext"
			        android:hint="@string/produce_name_hint"
			        android:singleLine="true"
			        android:textColor="@color/black"
			        android:textSize="18sp"		            
		            />
			</LinearLayout>
			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical"
			    android:background="@drawable/bg_input_item"
			    android:layout_marginLeft="30dp"
				android:layout_marginBottom="20dp"
			    >
			    <TextView 
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:textColor="@color/white"
			        android:text="@string/produce_date"
			        android:layout_weight="1"
			        android:textSize="18sp"
			        />
			    <EditText 
			        android:id="@+id/mProduceDate"
		            android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:background="@drawable/selector_edittext"
			        android:hint="@string/produce_date_hint"
			        android:singleLine="true"
			        android:textColor="@color/black"
			        android:textSize="18sp"
					/>
			</LinearLayout>
			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical"
			    android:background="@drawable/bg_input_item"
				android:layout_marginRight="30dp"
				android:layout_marginBottom="20dp"
			    >
			    <TextView 
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:textColor="@color/white"
			        android:text="@string/produce_package_date"			        
			        android:layout_weight="1"
			        android:textSize="18sp"
			        />
			    <EditText 
			        android:id="@+id/mPackageDate"
		            android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:background="@drawable/selector_edittext"
			        android:hint="@string/produce_package_date_hint"
			        android:singleLine="true"
			        android:textColor="@color/black"
			        android:textSize="18sp"		            
		            />
			</LinearLayout>
		  	<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical"
			    android:background="@drawable/bg_input_item"
			    android:layout_marginLeft="30dp"
				android:layout_marginBottom="20dp"
			    >
			    <TextView 
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:textColor="@color/white"
			        android:text="@string/produce_website"			        
			        android:layout_weight="1"
			        android:textSize="18sp"
			        />
			    <EditText 
			        android:id="@+id/mWebsite"
		            android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:background="@drawable/selector_edittext"
			        android:hint="@string/produce_website_hint"
			        android:singleLine="true"
			        android:textColor="@color/black"
			        android:textSize="18sp"		       
		            />
			</LinearLayout>
			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical"
			    android:background="@drawable/bg_input_item"
				android:layout_marginRight="30dp"
				android:layout_marginBottom="20dp"
			    >
			    <TextView 
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:textColor="@color/white"
			        android:text="@string/produce_list"
			        android:layout_weight="1"
			        android:textSize="18sp"
			        />
			    <EditText 
			        android:id="@+id/mList"
		            android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:background="@drawable/selector_edittext"
			        android:hint="@string/produce_list_hint"			        
			        android:singleLine="true"
			        android:textColor="@color/black"
			        android:textSize="18sp"		            
		            />
			</LinearLayout>
			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical"
			    android:background="@drawable/bg_input_item"
			    android:layout_marginLeft="30dp"
				android:layout_marginBottom="20dp"
			    >
			    <TextView 
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:textColor="@color/white"
			        android:text="@string/produce_address"			        
			        android:layout_weight="1"
			        android:textSize="18sp"
			        />
			    <EditText 
			        android:id="@+id/mAddress"
		            android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:background="@drawable/selector_edittext"
			        android:hint="@string/produce_address_hint"
			        android:singleLine="true"
			        android:textColor="@color/black"
			        android:textSize="18sp"		            
		            />
			</LinearLayout>			
		</LinearLayout>
	</ScrollView>
	<LinearLayout
	    android:id="@+id/mBtnLayout" 
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
	    >
	    <Button 	        
	        android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/btn_qrcode_create"
			android:textColor="@color/black"
			android:textSize="16sp"
			android:onClick="onButtonQRCreateClick"
			android:background="@drawable/selector_btn_style_green"			
	        />
	</LinearLayout>
</RelativeLayout>
